force-app/main/default/objects/Tournament__c/fields/Champion__c.field-meta.xml
<CustomField>
    <fullName>Champion__c</fullName>
    <label>Champion</label>
    <type>Text</type>
    <length>150</length>
</CustomField>