force-app/main/default/objects/Tournament__c/fields/Conference_Name__c.field-meta.xml
<CustomField>
    <fullName>Conference_Name__c</fullName>
    <label>Conference Name</label>
    <type>Text</type>
    <length>100</length>
</CustomField>