force-app/main/default/objects/Tournament__c/fields/ESPN_Conference_Id__c.field-meta.xml
<CustomField>
    <fullName>ESPN_Conference_Id__c</fullName>
    <label>ESPN Conference ID</label>
    <description>ESPN API group ID for this conference</description>
    <type>Text</type>
    <length>20</length>
</CustomField>