force-app/main/default/objects/Tournament__c/fields/Parent_Tournament__c.field-meta.xml
<CustomField>
    <fullName>Parent_Tournament__c</fullName>
    <label>Parent Tournament</label>
    <description>Links conference tournaments to their parent NCAA tournament</description>
    <type>Lookup</type>
    <referenceTo>Tournament__c</referenceTo>
    <relationshipLabel>Conference Tournaments</relationshipLabel>
    <relationshipName>Conference_Tournaments</relationshipName>
</CustomField>